--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
    
    
     <footer id="footer-style">
-        
-        <per>Designed by:</per> <a href="https://www.facebook.com/nwaf.alsaadazzam" class="a-co" target="_blank"><b>Nwaf
+
+        <per>Designed by::</per> <a href="https://www.facebook.com/nwaf.alsaadazzam" class="a-co" target="_blank"><b>Nwaf
                 Alsaad
                 Azzam</b></a><br>
         <a href="mailto:nwaf.happyboy.90@gmail.com" class="a-co "><i class="fa fa-envelope"></i>
